--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=control_precios
 
-spring.datasource.url=jdbc:mysql://localhost:3306/control_precios
-spring.datasource.username=develop
-spring.datasource.password=r1tch1
+spring.datasource.url=jdbc:mysql://192.0.0.61:336/control_precios
+spring.datasource.username=user
+spring.datasource.password=4025491
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
